# hca-cli

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  release.yml  weekly-rebuild.yml
docs/: findings.md  links.txt
packaging/arch/: .SRCINFO  PKGBUILD
src/hca_cli/: __init__.py  __main__.py  atlas.py  cli.py  client.py  datasets.py  filters.py  formatting.py  spec.py
src/hca_cli/data/: __init__.py  openapi_summary.json
tests/: conftest.py  test_atlas.py  test_cli.py  test_datasets.py  test_filters.py  test_formatting.py  test_packaging.py  test_spec.py
tools/: build_release_assets.sh  update_openapi_summary.py
