[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hca-cli"
version = "0.1.0"
description = "Self-documenting command line client for the Human Cell Atlas API"
readme = "README.md"
license = "0BSD"
requires-python = ">=3.11"

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
hca = "hca_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hca_cli = ["data/*.json"]
