[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hca-cli"
version = "0.1.0"
description = "Self-documenting command line client for the Human Cell Atlas API"
readme = "README.md"
license = "0BSD"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "build>=1.3.0",
  "mypy>=1.18.2",
  "pytest>=8.0",
  "ruff>=0.13.2",
]

[project.scripts]
hca = "hca_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hca_cli = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "unit: fast source-level tests",
  "packaging_smoke: lightweight packaging and entry-point smoke tests",
  "contract: optional broader API-facing contract tests",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/hca_cli"]
strict = true
warn_unused_ignores = true
